# okin

./: .gitignore  LICENSE  README.md  pyproject.toml
src/okin/base/: atom.py  chem_logger.py  chem_plot_utils.py  compound.py  reaction.py
src/okin/cd_reader/: cd_parser.py
src/okin/cd_reader/CDClasses/: cd_arrow.py  cd_chem.py  cd_fragment.py  cd_line.py  cd_reaction.py  cd_text.py
src/okin/kinetics/: cc_solver.py  tfs.py  vtna.py
src/okin/kinetics/examples/: vtna_test.py
src/okin/model/: augmentor.py  modler.py
src/okin/model/examples/: shower.py
src/okin/model/local_copasi/: optimize_k.py
src/okin/model/local_copasi/copasi_env/Scripts/: get_objgraph  pathos_connect  portpicker  pox  ppserver  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py  undill
src/okin/model/local_copasi/copasi_env/conda-meta/: certifi-2021.5.30-py36haa95532_0.json  history  pip-21.2.2-py36haa95532_0.json  python-3.6.13-h3758d61_0.json  setuptools-58.0.4-py36haa95532_0.json  sqlite-3.41.2-h2bbff1b_0.json  vc-14.2-h21ff451_1.json  vs2015_runtime-14.27.29016-h5e58377_2.json  wheel-0.37.1-pyhd3eb1b0_0.json  wincertstore-0.2-py36h7fe50ca_0.json
src/okin/model/local_copasi/default/: settings.txt
src/okin/model/local_copasi/temp/: TimeCourseData.txt  my_copasi.cps  my_copasi.sbml
src/okin/simulation/: rate_equation.py  simulator.py  tcc.py
src/okin/simulation/examples/: base_chem_test.py  chemdraw_test.py  rate_equation_test.py  simultion_test.py  test_all.py
(+18 files in other folders)
